# Precipice

./: .env  .gitignore  Cargo.toml  README.MD
.github/: dependabot.yml
exporter/: exporter_app.rs
exporter_gui/: exporter_app.rs  main.rs
full/: bencher_app.rs  main.rs
full_cli/: cli_args.rs  main.rs
full_gui/: main.rs
src/: bencher.rs  bencher_app.rs  egui_utils.rs  export.rs  io.rs  lib.rs  list.rs  main.rs
src/bencher/: async_receivers_bridge_code.rs
writeup/: main.tex
writeup/Precipice Writeup/: Precipice Presentation.md
writeup/Precipice Writeup/.obsidian/: community-plugins.json  workspace.json
writeup/Precipice Writeup/.obsidian/plugins/obsidian-advanced-slides/: data.json
writeup/Precipice Writeup/.obsidian/plugins/obsidian-advanced-slides/plugin/menu/: package.json
writeup/Precipice Writeup/.obsidian/plugins/obsidian-minimal-settings/: data.json
writeup/tex/: kebib.bib  main.tex
