[package]
name = "Benchmarker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", features = ["persistence"] }
egui = { version = "0.21.0", features = ["persistence"] }
egui_file = "0.8.0"
either = "1.8.1"
itertools = "0.10.5"