[package]
name = "benchmarker"
description = "Utility for benchmarking arbitrary binaries"
license = "MIT"
repository = "https://github.com/BurntNail/Benchmarker.git"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", features = ["persistence"] }
egui = { version = "0.21.0", features = ["persistence"] }
egui_file = "0.8.0"
itertools = "0.10.5"
plotly = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[[bin]]
name = "benchmarker_full"
path = "full/main.rs"

[[bin]]
name = "benchmarker_exporter"
path = "exporter/main.rs"