[package]
name = "benchmarker"
description = "Utility for benchmarking arbitrary binaries"
license = "MIT"
repository = "https://github.com/BurntNail/Benchmarker.git"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.9", features = ["derive"] }
eframe = { version = "0.21.3", features = ["persistence"] }
egui = { version = "0.21.0", features = ["persistence"] }
egui_file = "0.8.0"
itertools = "0.10.5"
plotly = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[[bin]]
name = "benchmarker_full_gui"
path = "full_gui/main.rs"

[[bin]]
name = "benchmarker_exporter_gui"
path = "exporter_gui/main.rs"

[[bin]]
name = "benchmarker_full_cli"
path = "full_cli/main.rs"
